[package]
name = "pinocchio-fundraiser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.10.2"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"

[dev-dependencies]
litesvm = "0.9.1"
litesvm-token = "0.9.1"
solana-clock = "~3.0"
solana-instruction = "3.1.0"
solana-keypair = "3.1.0"
solana-message = "3.0.1"
solana-native-token = "3.0.0"
solana-pubkey = "4.1.0"
solana-sdk-ids = "3.1.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.2"
